--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <ul>
 <li><p>시작일: 2015년 3월 23일 (월요일)</p></li>
-<li><p>참여자: 김인곤, 황윤림, 황윤식, 전형신, 양재필</p></li>
+<li><p>참여자: 김인곤, 황유림, 황윤식, 전형신, 양재필</p></li>
 <li><p>Helper: 심우민</p></li>
 </ul>
 
