--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
 
 </head>
 <body>
-
-
+	
 	<!-- 메리분 상단 탑 배너 -- 2015-04-16 : Start -->
 	<div class="u-cf">
 		<div class="fixed_top_banner">
 			<div class="container_Box">
 				<ul>
 					<li>
-					<img id="이미지" src="http://www.maryboone.co.kr/design/maryboone/smartskin/top_banner.jpg" onload="smartskinAppLink(this)" onclick="smartskinAppLink(this)"></li>
+					<img id="이미지" src="http://www.maryboone.co.kr/design/maryboone/smartskin/top_banner.jpg"></li>
 				</ul>
 			</div>
 		</div>
